--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@ coverage/
 # Ignore function.zip file in backend
 backend/config/function.zip
 backend/function.zip
+
+#Ignore build scripts
+deploy.sh
+/backend/deploy.sh
+/frontend/deploy.sh
